cabal-version:      2.4
name:               48h-scheme
version:            0.1.0.0

synopsis: A toy scheme for learning Haskell
description: I'm also using this to learn about writing parsers.

license:            GPL-3.0-or-later
author:             Fletcher Porter
maintainer:         me@fletcherporter.com

source-repository head
    type: git
    location: https://github.com/fpdotmonkey/48h_scheme

extra-doc-files: ./CHANGELOG.md

common common-settings
    default-language: Haskell2010
    ghc-options:
        -Wall

executable fpscheme
    import:           common-settings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1,
    hs-source-dirs:   app

library
    import:           common-settings
    hs-source-dirs:   src
    build-depends:    base ^>=4.17.2.1,
                      megaparsec ^>=9.7.0,
                      text ^>=2.1.2,
                      ghc-lib-parser ^>=9.8.4.20241130,
    exposed-modules:  Scheme
        

Test-Suite test-48h-scheme
    import:             common-settings
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:      SchemeParserSpec
    hs-source-dirs:     test
    build-depends:      base ^>=4.17.2.1,
                        hspec ^>=2.11.10,
                        hspec-discover ^>=2.11.10,
                        hspec-megaparsec ^>=2.2.1,
                        megaparsec ^>=9.7.0,
                        text ^>=2.1.2,
                        48h-scheme,
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
    -- build-tool-depends: hspec-discover:hspec-discover ^>=2.11.10
